# gd32f4xx-demo-suites-cmake-vscode

./: README.md
Projects/GD32F407R_START/01_GPIO_Running_LED/Application/: CMakeLists.txt
Projects/GD32F407R_START/01_GPIO_Running_LED/Drivers/BSP/GD32F407R_START/: CMakeLists.txt
Projects/GD32F407R_START/02_GPIO_Key_Polling_mode/: gd32f4xx_flash.ld
Projects/GD32F407R_START/04_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32F407R_START/05_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F407R_START/05_USB_MSC_Device/Application/: CMakeLists.txt
Projects/GD32F407R_START/05_USB_MSC_Device/cmake/: project.cmake
Projects/GD32F407R_START/06_USB_MSC_Host/: CMakeLists.txt
Projects/GD32F407R_START/06_USB_MSC_Host/Application/: CMakeLists.txt
Projects/GD32F407V_START/01_GPIO_Running_LED/Application/: CMakeLists.txt
Projects/GD32F407V_START/01_GPIO_Running_LED/cmake/: project.cmake
Projects/GD32F407V_START/03_EXTI_Key_Interrupt_mode/: CMakeLists.txt
Projects/GD32F407V_START/05_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F407V_START/05_USB_MSC_Device/Application/: CMakeLists.txt
Projects/GD32F407V_START/05_USB_MSC_Device/Drivers/BSP/GD32F407V_START/: CMakeLists.txt
Projects/GD32F407V_START/06_USB_MSC_Host/: CMakeLists.txt
Projects/GD32F407V_START/06_USB_MSC_Host/Application/: CMakeLists.txt
Projects/GD32F407V_START/06_USB_MSC_Host/cmake/: project.cmake
Projects/GD32F427R_START/02_GPIO_Key_Polling_mode/Application/: CMakeLists.txt
Projects/GD32F427R_START/04_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32F427R_START/05_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F427R_START/05_USB_MSC_Device/Application/: CMakeLists.txt
Projects/GD32F427R_START/05_USB_MSC_Device/Drivers/BSP/GD32F427R_START/: CMakeLists.txt
Projects/GD32F427R_START/05_USB_MSC_Device/cmake/: project.cmake
Projects/GD32F427R_START/06_USB_MSC_Host/: CMakeLists.txt  gd32f4xx_flash.ld
Projects/GD32F427R_START/06_USB_MSC_Host/Application/: CMakeLists.txt
Projects/GD32F427V_START/02_GPIO_Key_Polling_mode/: CMakeLists.txt
Projects/GD32F427V_START/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32F427V_START/: CMakeLists.txt
Projects/GD32F427V_START/03_EXTI_Key_Interrupt_mode/cmake/: project.cmake
Projects/GD32F427V_START/04_TIMER_Key_EXTI/Application/: CMakeLists.txt
Projects/GD32F427V_START/05_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F427V_START/05_USB_MSC_Device/Application/: CMakeLists.txt
Projects/GD32F427V_START/06_USB_MSC_Host/: CMakeLists.txt
Projects/GD32F427V_START/06_USB_MSC_Host/Application/: CMakeLists.txt
Projects/GD32F427V_START/06_USB_MSC_Host/cmake/: project.cmake
Projects/GD32F450I_EVAL/08_ADC0_ADC1_Follow_up_mode/Application/: CMakeLists.txt
Projects/GD32F450I_EVAL/09_ADC0_ADC1_Routine_Parallel_mode/: gd32f4xx_flash.ld
Projects/GD32F450I_EVAL/11_I2C_EEPROM/Application/: CMakeLists.txt
Projects/GD32F450I_EVAL/12_SPI_Quad_Flash/Application/: CMakeLists.txt
Projects/GD32F450I_EVAL/13_I2S_Audio_Player/Application/: CMakeLists.txt
Projects/GD32F450I_EVAL/15_EXMC_SDRAM_DeepSleep/Application/: CMakeLists.txt
Projects/GD32F450I_EVAL/16_EXMC_NandFlash/Application/: CMakeLists.txt
Projects/GD32F450I_EVAL/17_SDIO_SDCardTest/Application/: CMakeLists.txt
Projects/GD32F450I_EVAL/18_CAN_Network/: CMakeLists.txt
Projects/GD32F450I_EVAL/21_PMU_Sleep_Wakeup/Application/: CMakeLists.txt
Projects/GD32F450I_EVAL/24_TLI_IPA/Application/: CMakeLists.txt
Projects/GD32F450I_EVAL/25_DCI_OV2640/Application/: CMakeLists.txt
Projects/GD32F450I_EVAL/27_ENET_FreeRTOS_tcpudp/: CMakeLists.txt
Projects/GD32F450I_EVAL/27_ENET_Raw_webserver/: CMakeLists.txt
Projects/GD32F450I_EVAL/28_USB_Device_MSC_Udisk/: CMakeLists.txt
Projects/GD32F450I_EVAL/29_USB_Host_MSC_Host/: CMakeLists.txt
Projects/GD32F450V_START/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32F450V_START/01_GPIO_Running_LED/Drivers/BSP/GD32F450V_START/: CMakeLists.txt
Projects/GD32F450V_START/05_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F450V_START/06_USB_MSC_Host/: CMakeLists.txt
Projects/GD32F450Z_EVAL/14_EXMC_SDRAM/Drivers/BSP/GD32F450Z_EVAL/: CMakeLists.txt
Projects/GD32F450Z_EVAL/25_TRNG_Get_Random/: CMakeLists.txt
Projects/GD32F450Z_EVAL/26_ENET_FreeRTOS_tcpudp/: CMakeLists.txt
Projects/GD32F450Z_EVAL/26_ENET_FreeRTOS_tcpudp/Drivers/GD32F4xx_standard_peripheral/: CMakeLists.txt
Projects/GD32F450Z_EVAL/26_ENET_Raw_tcpudp/: CMakeLists.txt
Projects/GD32F450Z_EVAL/27_USB_Device_HID_Keyboard/: CMakeLists.txt
Projects/GD32F450Z_EVAL/28_USB_Host_MSC_Host/: CMakeLists.txt
Projects/GD32F470I_EVAL/18_CAN_Network/: CMakeLists.txt
Projects/GD32F470I_EVAL/27_ENET_FreeRTOS_tcpudp/: CMakeLists.txt
Projects/GD32F470I_EVAL/27_ENET_Raw_tcpudp/: CMakeLists.txt
Projects/GD32F470I_EVAL/28_USB_Device_HID_Keyboard/: CMakeLists.txt
Projects/GD32F470I_EVAL/29_USB_Host_MSC_Host/: CMakeLists.txt
Projects/GD32F470V_START/04_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32F470V_START/05_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F470V_START/06_USB_MSC_Host/: CMakeLists.txt
Projects/GD32F470Z_EVAL/07_ADC_Temperature_Vrefint_Vbat/: CMakeLists.txt
Projects/GD32F470Z_EVAL/26_ENET_FreeRTOS_tcpudp/: CMakeLists.txt
Projects/GD32F470Z_EVAL/26_ENET_Raw_webserver/: CMakeLists.txt
Projects/GD32F470Z_EVAL/27_USB_Device_MSC_Udisk/: CMakeLists.txt
Projects/GD32F470Z_EVAL/28_USB_Host_MSC_Host/: CMakeLists.txt
Projects/GD32F470Z_EVAL/28_USB_Host_MSC_Host/Drivers/BSP/GD32F470Z_EVAL/: CMakeLists.txt
(+276 files in other folders)
